# garoa

./: .gitignore  CMakeLists.txt  Garoa.py  Keybinds-cheatsheet.md  Makefile  __main__.py  build.bat  build.gradle  garoa.py  main.cpp  main.lua  main.py  main_old.lua  reference.lua  requirements.txt  settings.gradle  setup.cfg
assets/maps/: testMap.json  testMap.lua  testMap.tmx
config/: __init__.py  config.py  config.yml  player_config.py
core/src/eu/skaihen/: Garoa.java
core/src/io/skaihen/: GameScreen.java  Garoa.java  MainMenuScreen.java
core/src/io/skaihen/Player/: Camera.java
core/src/io/skaihen/World/: Block.java
core/src/io/skaihen/player/: Camera.java
core/src/io/skaihen/world/: Block.java
desktop/: build.gradle
desktop/src/eu/skaihen/: DesktopLauncher.java
desktop/src/io/skaihen/: DesktopLauncher.java
garoa/: __main__.py
garoa/config/: __init__.py  player_config.py
garoa/models/: __init__.py  character.py  health_bar.py  indicator_bar.py  player.py
garoa/utils/: __init__.py  utils.py
garoa/views/: __init__.py  game_view.py  title_screen_view.py
libraries/: bump.lua
models/: Character.py  PlayerCharacter.py  __init__.py  character.py  indicator_bar.py  player.py
old/: main.lua
src/: main.c  main.py
src/config/: __init__.py  config.py  player_config.py
src/garoa/: __main__.py
src/models/: __init__.py  character.py  player.py
src/utils/: utils.py
src/views/: __init__.py  game_view.py  title_screen_view.py
utils/: utils.py
views/: __init__.py  game_view.py  title_screen_view.py
(+2 files in other folders)
