[metadata]
name = garoa
version = 0.1.0
author = David Hidalgo - Skaihen
license = GPL-3
license_files = LICENSE

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
setup_requires =
    setuptools >= 40.6
    pip >= 10
install_requires =
    arcade >= 2.6.17

[options.packages.find]
include =
    src
    src.*

[options.extras_require]
dev =
